work/225/Chain_C/compile_stderr_0.txt
source_0.c:9:1: error: expected ‘;’, ‘,’ or ‘)’ before ‘{’ token
 {
 ^
